--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.21.0"
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "mongodb": "^6.10.0"
   }
 }
